Arreglando ultimos detalles
